# ToiletDuckificator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
example_folder_program/: calculators.py  main.py  reports.py  settings.py
example_nested_program/: main.py  settings.py
example_nested_program/core/: app_runner.py
example_nested_program/core/messages/: builder.py  formatters.py
example_program/: sample_app.duck.py  sample_app.py
tests/: test_examples_integration.py  test_obfuscator.py
toiletduckificator/: __init__.py  gui.py  name_generator.py  obfuscator.py
