[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toiletduckificator"
version = "0.1.0"
description = "Simple Python variable obfuscator with a Tkinter GUI."
requires-python = ">=3.11"

[project.scripts]
toiletduckificator = "toiletduckificator.gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
