[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toiletduckificator"
version = "0.1.0"
description = "Configurable Python obfuscator with a Tkinter GUI."
requires-python = ">=3.11"

[project.scripts]
toiletduckificator = "toiletduckificator.gui:main"

[tool.setuptools.packages.find]
include = ["toiletduckificator*"]
exclude = ["tests*", "example_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
